--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npx prisma generate && npx prisma migrate dev && npx prisma db seed",
+    "postinstall": "npx prisma generate && npx prisma migrate dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "ts-node --transpile-only prisma/seed.msj"
+    "prisma:seed": "ts-node --transpile-only prisma/seed.msj",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -50,6 +51,7 @@
     "@types/react-dom": "^19.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "husky": "^9.1.7",
     "prisma-erd-generator": "^2.0.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
