--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
@@ -47,6 +48,7 @@
     "@mermaid-js/mermaid-cli": "^11.4.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.17.28",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9",
