--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npx prisma generate && npx prisma migrate dev && npx prisma migrate reset",
+    "postinstall": "npx prisma generate && npx prisma migrate dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
